@@ -1,6 +1,6 @@
 % File src/library/base/man/get.Rd
 % Part of the R package, https://www.R-project.org
-% Copyright 1995-2023 R Core Team
+% Copyright 1995-2024 R Core Team
 % Distributed under GPL 2 or later
 
 \name{get}
@@ -82,6 +82,9 @@ dynGet(x, ifnotfound = , minframe = 1L, inherits = FALSE)
 }
 \value{
   For \code{get}, the object found.  If no object is found an error results.
+  If the object is the internal missing argument (aka \code{R_MissingArg}
+  in C), a \emph{classed} error, class \code{"getMissingError"} is
+  signalled.
 
   For \code{mget}, a named list of objects (found or specified \emph{via}
   \code{ifnotfound}).
@@ -116,5 +119,16 @@ get("\%o\%")
 ## test mget
 e1 <- new.env()
 mget(letters, e1, ifnotfound = as.list(LETTERS))
+
+## very low-level: get()ing the "missing argument", e.g., inside browser()
+ls.str(E <- environment((\(m) \(){})()))  # m : <missing>
+str(E$m) # (empty) symbol
+tryCatch(get("m",E), error = function(e) e) # <getMissingError ....>
+stopifnot(exprs = {
+    inherits(tryCatch(get ("m", E), error=identity), "getMissingError")
+    inherits(tryCatch(get0("m", E), error=identity), "getMissingError")
+    is.symbol(E$m) # => valid argument to get(), and *also* gets 'missing arg':
+    inherits(tryCatch(get ( E$m ) , error=identity), "getMissingError")
+})
 }
 \keyword{data}
